fixed the overflow

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;800&family=Source+Sans+Pro:wght@300;400&display=swap');
 
 .sugma {
-    max-width: 1200px;
+    max-width: 560px;
     max-height: 90vh;
     display: flex;
-    flex-direction: row;
+    overflow: hidden;
 }
 
 a > img {
